--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/bootdb
+spring.datasource.url=jdbc:mysql://mysqldb/bootdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.platform=mysql
