--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.datasource.url=jdbc:mysql://mysqldb/bootdb
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+
